src/BRepGProp/BRepGProp_MeshProps.cxx
@@ -1,25 +1,26 @@
 // Copyright (c) 2018 OPEN CASCADE SAS
-// This file is part of commercial software by OPEN CASCADE SAS, 
-// furnished in accordance with the terms and conditions of the contract 
-// and with the inclusion of this copyright notice. 
-// This file or any part thereof may not be provided or otherwise 
-// made available to any third party. 
-// 
-// No ownership title to the software is transferred hereby. 
-// 
-// OPEN CASCADE SAS makes no representation or warranties with respect to the 
-// performance of this software, and specifically disclaims any responsibility 
-// for any damages, special or consequential, connected with its use.
+//
+// This file is part of Open CASCADE Technology software library.
+//
+// This library is free software; you can redistribute it and/or modify it under
+// the terms of the GNU Lesser General Public License version 2.1 as published
+// by the Free Software Foundation, with special exception defined in the file
+// OCCT_LGPL_EXCEPTION.txt. Consult the file LICENSE_LGPL_21.txt included in OCCT
+// distribution for complete text of the license and disclaimer of any warranty.
+//
+// Alternatively, this file may be used under the terms of Open CASCADE
+// commercial license or contractual agreement.
 
 #include <BRepGProp_MeshProps.hxx>
+
+#include <BRepGProp.hxx>
+#include <ElSLib.hxx>
+#include <gp_Ax3.hxx>
 #include <gp_Pnt.hxx>
+#include <GProp.hxx>
 #include <Poly_Triangulation.hxx>
 #include <Poly_Triangle.hxx>
-#include<ElSLib.hxx>
-#include<gp_Ax3.hxx>
-#include <BRepGProp.hxx>
 #include <TopLoc_Location.hxx>
-#include <GProp.hxx>
 
 //=======================================================================
 //function : CalculateElSProps
