src/OSD/OSD_ThreadPool.hxx
@@ -1,17 +1,16 @@
 // Created by: Kirill Gavrilov
-// Copyright (c) 2017 OPEN CASCADE SAS
+// Copyright (c) 2017-2019 OPEN CASCADE SAS
 //
-// This file is part of commercial software by OPEN CASCADE SAS.
+// This file is part of Open CASCADE Technology software library.
 //
-// This software is furnished in accordance with the terms and conditions
-// of the contract and with the inclusion of this copyright notice.
-// This software or any other copy thereof may not be provided or otherwise
-// be made available to any third party.
-// No ownership title to the software is transferred hereby.
+// This library is free software; you can redistribute it and/or modify it under
+// the terms of the GNU Lesser General Public License version 2.1 as published
+// by the Free Software Foundation, with special exception defined in the file
+// OCCT_LGPL_EXCEPTION.txt. Consult the file LICENSE_LGPL_21.txt included in OCCT
+// distribution for complete text of the license and disclaimer of any warranty.
 //
-// OPEN CASCADE SAS makes no representation or warranties with respect to the
-// performance of this software, and specifically disclaims any responsibility
-// for any damages, special or consequential, connected with its use.
+// Alternatively, this file may be used under the terms of Open CASCADE
+// commercial license or contractual agreement.
 
 #ifndef _OSD_ThreadPool_HeaderFile
 #define _OSD_ThreadPool_HeaderFile
